"Ashamed with their actions, the user deleted their flow"

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -38,7 +38,7 @@
           <md-tooltip>Help</md-tooltip>
           <i class="fa fa-lg fa-question"></i>
         </md-button>
-        <md-button ng-click="deleteFlow(activeFlow)" aria-label="Delete Flow">
+        <md-button ng-click="deleteFlow(activeFlow)" data-action="delete-flow" aria-label="Delete Flow">
           <md-tooltip>Delete Flow</md-tooltip>
           <i class="fa fa-lg fa-trash"></i>
         </md-button>
