--- a/public/pages/resources.html
+++ b/public/pages/resources.html
@@ -2,7 +2,7 @@
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
     <div flex layout="row">
       <a href class="menu-icon" ng-click="toggleNav()">
-        <i class="fa fa-book"></i>
+        <i class="fa fa-bars"></i>
         Resources
       </a>
     </div>
