"We beat this levels angular boss"

--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
 
 <footer></footer>
 
-<script src="//d1g8h12lk9ydf.cloudfront.net/js/v1.12.0/meshblu.bundle.js?v=busted"></script>
+<script src="//d1g8h12lk9ydf.cloudfront.net/js/latest/meshblu.bundle.js?v=busted"></script>
 <script src="/assets/javascripts/dist/dependencies.js?v=busted"></script>
 <script src="/assets/javascripts/dist/application.js?v=busted"></script>
 
