create an account isn't hardcoded to production anymore

--- a/public/pages/login.html
+++ b/public/pages/login.html
@@ -38,7 +38,7 @@
     </div>
 
     <div layout="row">
-      <md-button class="md-primary login-button-signup" href="https://login.octoblu.com/signup?callback=https%3A%2F%2Fapp.octoblu.com%2Fapi%2Fsession%2F" flex>Create an Account</md-button>
+      <md-button class="md-primary login-button-signup" ng-href="{{controller.signUpUri}}" flex>Create an Account</md-button>
     </div>
   </div>
 </md-content>
