--- a/public/pages/flow-browser-nodes.html
+++ b/public/pages/flow-browser-nodes.html
@@ -1,8 +1,3 @@
 <h4 class="text-center text-muted">Configured Nodes</h4>
-<ul class="flow-browser-nodes">
-    <li class="flow-node-type" ng-repeat="flowNodeType in flowNodeTypes | filter: {category : '!operation'}" ng-click="addFlowNodeType(flowNodeType)" data-type="{{flowNodeType.type}}">
-        <div class="node-thumbnail"
-             style="background-image: url({{flowNodeType.logo}});"></div>
-        <label class="text-center">{{flowNodeType.name || flowNodeType.type}}</label>
-    </li>
-</ul>
+
+<div ng-include="templateForViewStyle()"></div>
