--- a/public/pages/flow-browser-view-controls.html
+++ b/public/pages/flow-browser-view-controls.html
@@ -3,7 +3,7 @@
     title="Thumbnail View"
     tooltip="Thumbnail View"
     ng-click="switchViewStyle('thumbnail')"
-    ng-class="{'active': activeTab.viewStyle === 'thumbnail'}">
+    ng-class="{'active': activeFlow.browserTab.viewStyle === 'thumbnail'}">
     <i class="fa fa-th"></i>
   </button>
 
@@ -11,7 +11,7 @@
     title="Detail View"
     tooltip="Detail View"
     ng-click="switchViewStyle('detail')"
-    ng-class="{'active': activeTab.viewStyle === 'detail'}">
+    ng-class="{'active': activeFlow.browserTab.viewStyle === 'detail'}">
     <i class="fa fa-th-list"></i>
   </button>
 </div>
