--- a/public/pages/flow-unconfigured-nodes-detail-list.html
+++ b/public/pages/flow-unconfigured-nodes-detail-list.html
@@ -12,7 +12,7 @@
     ng-click="addFlowNodeType(flowNodeType)">
 
     <md-card-content layout="row" layout-padding>
-      <img class="node-detail-thumbnail"
+      <img class="node-grid-thumbnail"
         src="{{flowNodeType.logo}}"
         alt="{{flowNodeType.name || flowNodeType.type}}"
         flex="33" />
