Removed links to home page, removed home page from routes, create redir to designer

--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-link" href ui-sref="material.home">
+            <a class="navbar-link" href ui-sref="material.design">
                 <img src="/assets/images/octoblu.png" height="50px"/>
             </a>
         </div>
@@ -34,7 +34,6 @@
                         </li>
                     </ul>
                 </li>
-                <li ui-sref-active="active"><a href ui-sref="material.home"><i class="fa fa-home fa-lg"></i>&nbsp;Home</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.nodes"><i class="fa fa-plug fa-lg"></i>&nbsp;Connect</a></li>
                 <li ui-sref-active="active"><a href ui-sref="design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
