Removing the URL check for HTTP nodes so that you can actually inject dynamic URLs

--- a/public/pages/node_forms/http_request_form.html
+++ b/public/pages/node_forms/http_request_form.html
@@ -5,7 +5,7 @@
 
 <md-input-container>
   <label for="url">Url</label>
-  <input  id="url" ng-model="flowNode.url" placeholder="http://example.com" type="url" required>
+  <input  id="url" ng-model="flowNode.url" placeholder="http://example.com" required>
 </md-input-container>
 
 <h3>Headers</h3>
