--- a/public/pages/node_forms/http_request_body_form.html
+++ b/public/pages/node_forms/http_request_body_form.html
@@ -4,7 +4,7 @@
 </md-input-container>
 <md-input-container>
   <label for="url">Url</label>
-  <input  id="url" ng-model="flowNode.url" placeholder="http://example.com" type="url" required>
+  <input  id="url" ng-model="flowNode.url" placeholder="http://example.com" required>
 </md-input-container>
 
 <h3>Body</h3>
