Add ndevice stuff

--- a/public/pages/connector/devices/detail/index.html
+++ b/public/pages/connector/devices/detail/index.html
@@ -43,7 +43,7 @@
 
         <section class="col-xs-12">
           <tabset>
-            <tab heading="Properties">
+            <tab heading="Properties" active="true">
               <div ng-include="'/pages/connector/devices/detail/device-properties.html'"></div>
             </tab>
             <tab heading="Accessible By">
