--- a/public/pages/device-detail-permissions.html
+++ b/public/pages/device-detail-permissions.html
@@ -6,9 +6,9 @@
     <thead>
       <tr>
         <th></th>
-        <th ng-show="controller.device.discoverWhitelist">Can Be Discovered By</th>
-        <th ng-show="controller.device.receiveWhitelist">Can Be Sent Messages By</th>
-        <th ng-show="controller.device.configureWhitelist">Can Be Modified By</th>
+        <th>Can Be Discovered By</th>
+        <th>Can Be Sent Messages By</th>
+        <th>Can Be Modified By</th>
       </tr>
     </thead>
 
@@ -18,14 +18,14 @@
           <div class="process-row-logo" ng-style="{'background-image': 'url(' + device.logo + ')'}" ng-class="{faded: !device.online}"></div>
           {{device.name}} ({{device.type}})
         </td>
-        <td ng-show="controller.device.discoverWhitelist">
-          <md-checkbox aria-label="Discover"></md-checkbox>
+        <td>
+          <md-checkbox aria-label="Discover" ng-model="controller.permissions.discover[device.uuid]"></md-checkbox>
         </td>
-        <td ng-show="controller.device.receiveWhitelist">
-          <md-checkbox aria-label="Send"></md-checkbox>
+        <td>
+          <md-checkbox aria-label="Send" ng-model="controller.permissions.receive[device.uuid]"></md-checkbox>
         </td>
-        <td ng-show="controller.device.configureWhitelist">
-          <md-checkbox aria-label="Configure"></md-checkbox>
+        <td>
+          <md-checkbox aria-label="Configure" ng-model="controller.permissions.configure[device.uuid]"></md-checkbox>
         </td>
       </tr>
     </tbody>
