Off to beertrospective

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 
-<html>
+<html ng-app="octobluApp">
 <head>
     <!-- META -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
@@ -48,7 +48,7 @@
         }
     </style>
 </head>
-<body class="contrast-sea-blue container-fluid" ng-app="octobluApp">
+<body class="container-fluid">
 
 <div ui-view="" class="row-fluid full-height"></div>
 
