--- a/public/pages/device-detail.html
+++ b/public/pages/device-detail.html
@@ -53,7 +53,7 @@
         Token
       </div>
       <div class="meta-value">
-        <md-button class="md-primary">Generate Token</md-button>
+        <md-button ng-click="controller.generateSessionToken()" class="md-primary">Generate Token</md-button>
       </div>
     </div>
   </div>
