Wire up delete button

--- a/public/pages/device-detail.html
+++ b/public/pages/device-detail.html
@@ -25,7 +25,7 @@
     </div>
 
     <div class="device-actions">
-      <md-button class="md-raised md-warn md-hue-2">Delete</md-button>
+      <md-button ng-click="controller.confirmDeleteDevice()" class="md-raised md-warn md-hue-2">Delete</md-button>
     </div>
   </div>
 
