Receive or send? Who knows?

--- a/public/pages/device-detail-permissions.html
+++ b/public/pages/device-detail-permissions.html
@@ -22,7 +22,7 @@
           <md-checkbox aria-label="Discover" ng-model="controller.permissions.discover[device.uuid]"></md-checkbox>
         </td>
         <td class="text-center">
-          <md-checkbox aria-label="Send" ng-model="controller.permissions.receive[device.uuid]"></md-checkbox>
+          <md-checkbox aria-label="Send" ng-model="controller.permissions.send[device.uuid]"></md-checkbox>
         </td>
         <td class="text-center">
           <md-checkbox aria-label="Configure" ng-model="controller.permissions.configure[device.uuid]"></md-checkbox>
