--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -7,7 +7,7 @@
     <div flex layout="row" class="md-toolbar-tools">
       <h2 class="page-heading">
         <a href class="menu-icon" ng-click="toggleNav()">
-          <i class="fa fa-bars"></i>
+          <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
         </a>
       </h2>
 
