--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,7 +1,7 @@
 <md-toolbar>
   <h2 class="md-toolbar-tools page-heading">
     <a href class="menu-icon" ng-click="toggleNav()">
-      <i class="fa fa-bars"></i>
+      <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
       Home
     </a>
   </h2>
