--- a/public/pages/device-message-form.html
+++ b/public/pages/device-message-form.html
@@ -1,3 +1,3 @@
 <div>
-  <form ng-if="schema" sf-schema="schema" sf-form="form" sf-model="model"></form>
+  <form ng-if="device.messageSchema" sf-schema="device.messageSchema" sf-form="['*']" sf-model="model"></form>
 </div>
