--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -1,12 +1,12 @@
 <div class="materialize" layout="row">
-  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="navIsOpen">
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="navIsOpen" md-is-locked-open="isNavLockedOpen()">
     <md-toolbar class="md-octo-blue-theme" layout-align="center">
-      <a href ng-click="closeNav()" ui-sref="material.design" class="navbar-logo">
+      <span class="navbar-logo">
         <img src="/assets/images/octoblu_logo.png">
-      </a>
+      </span>
     </md-toolbar>
 
-    <md-button class="md-fab md-primary" ng-click="closeNav()" aria-label="Close Nav">
+    <md-button class="md-fab md-primary" ng-click="closeNav()" aria-label="Close Nav" ng-hide="isNavLockedOpen()">
       <i class="fa fa-bars fa-2x"></i>
     </md-button>
 
