--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -1,5 +1,5 @@
 <div flex layout-fill layout="row" layout-align="center" style="z-index: 3;">
-  <div flex="66" flex-phone="95" flex-tablet="95" layout-fill layout="column" class="md-whiteframe-z2" style="background: white; padding: 0 15px;">
+  <div layout-fill layout="column"  style="background: white; padding: 0 15px;">
 
     <br>
     <br>
