--- a/public/pages/node-wizard/add-subdevice/form.html
+++ b/public/pages/node-wizard/add-subdevice/form.html
@@ -21,7 +21,7 @@
       </div>
 
       <div class="form-group">
-        <schema-editor schema="device.optionsSchema" model="device.options" allow-json-edit="true" additional-properties="true"></schema-editor>
+        <div sf-schema="device.optionsSchema" sf-form="['*']" sf-model="device.options"></div>
       </div>
 
       <div class="form-group">
