--- a/public/pages/resources.html
+++ b/public/pages/resources.html
@@ -2,7 +2,7 @@
   <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
     <div flex layout="row">
       <a href class="menu-icon" ng-click="toggleNav()">
-        <i class="fa fa-bars"></i>
+        <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
         Resources
       </a>
     </div>
@@ -10,8 +10,7 @@
 </md-toolbar>
 
 <div flex layout-fill layout="row" layout-align="center">
-  <div flex-gt-md="50" flex-md="95" layout-fill layout="row" >
-
+  <div layout-fill layout="row" >
     <md-list flex class="resource__list">
       <md-item ng-repeat="resource in resources">
         <md-item-content class="resource">
