--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -1,9 +1,9 @@
 <div class="materialize" layout="row">
   <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="navIsOpen" md-is-locked-open="isNavLockedOpen()">
     <md-toolbar class="md-octo-blue-theme" layout-align="center">
-      <span class="navbar-logo">
+      <a href ng-click="closeNav()" class="navbar-logo">
         <img src="/assets/images/octoblu_logo.png">
-      </span>
+      </a>
     </md-toolbar>
 
     <md-button class="md-fab md-primary" ng-click="closeNav()" aria-label="Close Nav" ng-hide="isNavLockedOpen()">
